# gf2x

./: .gitlab-ci.yml  .gitmodules  .mailmap  Makefile.am  NEWS  README.md  configure.ac  gf2x.c  gf2x.h.in.in  toom-gpl.c  toom.c  wipeout-autotools
apps/: Makefile.am  acinclude.m4  check-factor-000.sh  check-factor-001.sh  check-factor-002.sh  check-factor-003.sh  configure.ac  factor.cpp  foo.cpp
apps/config/: features.m4
ci/: 00-docker-build.sh  00-dockerfile.sh  00-prepare-docker.sh  00-prepare-shell.sh  000-functions-bash.sh  001-environment.sh  01-conf.sh  02-build.sh  03-check.sh  40-testsuite.sh  debug.sh
config/: acinclude.m4  features.m4
fft/: Makefile.am  generate-api.pl  gf2x-cantor-fft.c  gf2x-cantor-fft.h  gf2x-fake-fft.c  gf2x-fake-fft.h  gf2x-fft-impl-utils.h  gf2x-fft.h  gf2x-fft.h.in  gf2x-ternary-fft.c  gf2x-ternary-fft.h  gf2x_fft_check.c  template.h
fft/mpfq/: Makefile.mpfq  better-integrate-gf2x.patch  mpfq-api.pl  mpfq.h
fft/mpfq/i386/: mpfq_2_128.h  mpfq_2_64.h
fft/mpfq/x86_64/: mpfq_2_128.h  mpfq_2_64.h
jenkins/: check-generic.sh  check-out-of-source.sh  check-tuning-uses-correct-lib.sh  common.sh  dist-lgpl.sh  dist.sh  tune-generic.sh
src/: Makefile.am  README  tunefft.c  tunetoom.c
tests/: check-and-bench-common.c  check-and-bench-common.h
trunk/: ChangeLog  configure.ac
trunk/tuning/: Makefile.am  tunetoom.c
